# air-quility_monitor

./: CMakeLists.txt  DESIGN.md  Kconfig  README.md  prj.conf
boards/: nrf9160dk_nrf9160_ns.conf  thingy91_nrf9160_ns.conf
src/: Buffer.cpp  Buffer.hpp  Mqtt.cpp  Mqtt.hpp  Network.cpp  Network.hpp  Sensor.cpp  Sensor.hpp  Uploader.cpp  Uploader.hpp  main.cpp  types.hpp
